--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/design_default_color_secondary_variant">
+    android:background="@color/primary_dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/nav_profile_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/ic_icons8_user"
-        app:civ_border_color="@color/colorPrimaryDark"
+        android:scaleType="centerCrop"
+        app:civ_border_color="@color/primary_text"
         app:civ_border_width="2dp"
         app:layout_constraintBottom_toTopOf="@+id/nav_user_full_name"
         app:layout_constraintEnd_toStartOf="@+id/nav_guideline2"
         app:layout_constraintStart_toStartOf="@+id/nav_guideline1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_icons8_user"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/nav_guideline1"
@@ -39,7 +41,7 @@
         android:layout_marginBottom="16dp"
         android:text="Username"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/icons"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/nav_guideline2"
